--- a/src/scss/components/_shop.scss
+++ b/src/scss/components/_shop.scss
@@ -33,6 +33,13 @@
       padding: 0 12px;
       flex: 0 1 20%;
       margin: 0 0 20px 0;
+
+      @media (max-width: 550px) {
+        flex: 0 1 33.333%;
+      }
+      @media (max-width: 430px) {
+        flex: 0 1 50%;
+      }
     }
     &__item {
       position: relative;
